feature - context menu in grid is dynamic based on selected item